2006-10-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-charset-synonym-alist, mm-charset-override-alist): Add
	iso-8859-8/windows-1255 and iso-8859-9/windows-1254.

	* nnheader.el (nnheader-find-file-noselect): Inhibit version-control.

	* message.el (message-replacement-char): New variable.
	(message-fix-before-sending): Use it.
	(message-simplify-subject): New function to remove duplicate code.
	(message-reply, message-followup): Use it.

	* gnus-sum.el (gnus-summary-make-menu-bar): Clarify
	gnus-summary-limit-to-articles.

2006-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-with-local-quit): New macro.

	* gnus-demon.el (gnus-demon): Replace with-local-quit with it.

2006-10-02  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-string-remove-all-properties): another fix

2006-09-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-string-remove-all-properties): fix to ignore
	non-string data (needs to be done in the registry too)

2006-09-28  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-save, gnus-registry-cache-save)
	(gnus-registry-remove-alist-text-properties, gnus-registry-action)
	(gnus-registry-split-fancy-with-parent)
	(gnus-registry-fetch-simplified-message-subject-fast)
	(gnus-registry-fetch-sender-fast, gnus-registry-store-extra-entry):
	remove text properties on ingress into the registry and when it's saved
	(gnus-registry-clean-empty-function): fixed bug with cleaning the
	registry from entries with no groups

2006-09-28  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-string-remove-all-properties): utility function to
	remove string properties

2006-09-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* gmm-utils.el (gmm): Adjust custom version.

	* mm-util.el (mm-charset-override-alist, mm-charset-eval-alist): Adjust
	custom version.

	* gnus-draft.el (gnus-draft-mode): Don't call `mml-mode'.

2006-09-27  Reiner Steib  <Reiner.Steib@gmx.de>
