@@ -1119,15 +1119,10 @@ If SUFFIX is non-nil, add that at the end of the file name."
 			     (setq file (concat file suffix)))
 			 (if dir-flag
 			     (make-directory file)
-			   (if (featurep 'xemacs)
-			       ;; NOTE: This is unsafe if XEmacs users
-			       ;; don't use a secure temp directory.
-			       (if (file-exists-p file)
-				   (signal 'file-already-exists
-					   (list "File exists" file))
-				 (write-region "" nil file nil 'silent))
-			     (write-region "" nil file nil 'silent
-					   nil 'excl)))
+			   ;; NOTE: This is unsafe if XEmacs users don't use a
+			   ;; secure temp directory.
+			   (gmm-write-region "" nil file nil 'silent
+					     nil 'excl))
 			 nil)
 		     (file-already-exists t)
 		     ;; The XEmacs version of `make-directory' issues
