@@ -481,7 +481,8 @@ by nnmaildir-request-article.")
 	(prin1 (vector storage-version num msgid nov) (current-buffer))
 	(setq file (concat novfile ":"))
 	(nnmaildir--unlink file)
-	(write-region (point-min) (point-max) file nil 'no-message nil 'excl))
+	(gmm-write-region (point-min) (point-max) file nil 'no-message nil
+			  'excl))
       (rename-file file novfile 'replace)
       (setf (nnmaildir--art-msgid article) msgid)
       nov)))
@@ -1298,8 +1299,8 @@ by nnmaildir-request-article.")
 	(throw 'return nil))
       (save-excursion
 	(set-buffer buffer)
-	(write-region (point-min) (point-max) tmpfile nil 'no-message nil
-		      'excl))
+	(gmm-write-region (point-min) (point-max) tmpfile nil 'no-message nil
+			  'excl))
       (unix-sync) ;; no fsync :(
       (rename-file tmpfile (concat (nnmaildir--cur dir) file suffix) 'replace)
       t)))
@@ -1392,8 +1393,8 @@ by nnmaildir-request-article.")
 				  (throw 'return nil))))
       (condition-case nil (add-name-to-file nnmaildir--file tmpfile)
 	(error
-	 (write-region (point-min) (point-max) tmpfile nil 'no-message nil
-		       'excl)
+	 (gmm-write-region (point-min) (point-max) tmpfile nil 'no-message nil
+			   'excl)
 	 (unix-sync))) ;; no fsync :(
       (nnheader-cancel-timer 24h)
       (condition-case err
