@@ -1,3 +1,14 @@
+2006-10-10  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* gmm-utils.el (gmm-write-region): New function based on compatibility
+	code from `mm-make-temp-file'.
+
+	* mm-util.el (mm-make-temp-file): Use `gmm-write-region'.
+
+	* nnmaildir.el (nnmaildir--update-nov)
+	(nnmaildir-request-replace-article, nnmaildir-request-accept-article):
+	Use `gmm-write-region'.
+
 2006-10-04  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* mm-util.el (mm-charset-synonym-alist, mm-charset-override-alist): Add
